--- a/angular.json
+++ b/angular.json
@@ -80,8 +80,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
-            ],
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "styles.css"
+           ],
             "scripts": [],
             "assets": [
               "src/favicon.ico",
